rootshell (0.5.12) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 30 Apr 2007 00:36:54 +0200

rootshell (0.5.11) unstable; urgency=low

  * new icon sidux-terminal

 -- Joaquim Boura <x-un-i@sidux.com>  Sun, 29 Apr 2007 21:04:57 +0200

rootshell (0.5.10) unstable; urgency=low

  [ Joaquim Boura ]
  * moving to xdg-menus
  * using sidux-xdg in depends

  [ Stefan Lippers-Hollmann ]
  * fix *.desktop location.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 31 Mar 2007 04:23:11 +0200

rootshell (0.5.9) unstable; urgency=low

  * rootshell-kanotix never existed in sidux or debian, don't conlfict with
    it.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu,  1 Mar 2007 17:50:01 +0100

rootshell (0.5.8) unstable; urgency=low

  [ Joaquim Boura ]
  * Initial version for sidux

  [ Stefan Lippers-Hollmann ]
  * tweak debian/control.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun,  3 Dec 2006 02:38:46 +0100

rootshell-kanotix (0.5.7) unstable; urgency=low

  * fix lintian errors.
  * use generic x-terminal-emulator support instead of harcoded application,
    thanks to x-un-i.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 16 Nov 2006 22:57:35 +0100

rootshell-kanotix (0.5.6) unstable; urgency=low

  * remove cdbs auto-update-feature.
  * remove knoppix virtual packages.
  * bump compat level to 5.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 17 Dec 2005 03:18:43 +0100

rootshell-kanotix (0.5.5) unstable; urgency=low

  * overhaul packaging.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 17 Dec 2005 03:18:39 +0100

rootshell-kanotix (0.5.4) unstable; urgency=low

  * switch to kanotix-su
  * improve packaging.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 31 Mar 2005 15:03:56 +0200

rootshell-kanotix (0.5-3) unstable; urgency=low

  * remove legacy gnome menu entries. 

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 31 Jan 2005 01:26:44 +0100

rootshell-kanotix (0.5-2) unstable; urgency=low
