@@ -1,3 +1,10 @@
 #!/usr/bin/make -f
 
 include /usr/share/cdbs/1/rules/debhelper.mk
+
+install/rootshell::
+	mkdir -p debian/rootshell/usr/share/pixmaps
+	convert icons/hicolor/32x32/apps/sidux-terminal.png \
+		debian/rootshell/usr/share/pixmaps/rootshell.xpm
+	convert icons/hicolor/16x16/apps/sidux-terminal.png \
+		debian/rootshell/usr/share/pixmaps/rootshell-16.xpm
