@@ -2,7 +2,7 @@
 Encoding=UTF-8
 Type=Application
 
-Exec=su-me x-terminal-emulator -e /bin/bash --login
+Exec=su-me x-terminal-emulator -e /bin/login -f root
 
 Icon=sidux-terminal
 
