@@ -1,8 +1,9 @@
 rootshell (0.5.12) UNRELEASED; urgency=low
 
-  * NOT RELEASED YET
+  * Add debian menu entry. Build-Depend on imagemagick.
+  * Execute login -f root instead of bash -login.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 30 Apr 2007 00:36:54 +0200
+ -- Kel Modderman <kel@otaku42.de>  Sun, 17 Jun 2007 10:39:06 +1000
 
 rootshell (0.5.11) unstable; urgency=low
 
